# lich

./: ChangeLog.txt  License.txt  Makefile.in  README.md  README.txt  cachedarray.c  config.h  configure  configure.ac  cstring.c  gemlib.rb  hook.c  libcharsheet.rb  libhooks.rb  libsettings.rb  lich-lib.rb  lich-libcritter.rb  lich-libmatch.rb  lich.c  lich.h  lich.rb  lich2c.rb  lichlauncher.c  lichnet-deps.rb  lichparser.c  lichrb.c  lichscript.c  lichxml-build_shared.txt  lichxml.c  pathfind.c  rbconf.h  rbconfig.h  rbflist.txt  regcheck.c  ruby_src_changes.txt  scriptio.c  sfdialog.rb  sfparser.rb  stringformatting.rb  textmap.c  (+9 more)
map/: convert.rb  init.c  lich-libmap.rb  load.c  main.c  map.h  map.txt  render.c  testdata.txt  testdata2.txt  testdata3.txt  vector.c  vector.h
